z-index-issue-on-eventpage

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -2222,7 +2222,7 @@ ul {
       height: 100%;
       top: 0;
       left: 0;
-      z-index: 999999;
+      z-index: 99;
       .banner--info{
           max-width: 750px;
           padding-top:50px;
